# Iterative_MIMO_Project

./: .gitignore  CMakeLists.txt  README.md  decoder_accuracy.csv  main.cpp  placeholder_test.cpp  planning.txt  test.cpp
Report/: main.tex
decoders/: BICMDecoder.cpp  BPDecoder.cpp  BPDecoder.h  ClusteredDecoder.cpp  Decoder.h  GaBPDecoder.cpp  LDPCCDecoder.cpp  NearestNeighborDecoder.cpp  NearestNeighborDecoder.h
eigen-3.4.0/Eigen/src/Cholesky/: LDLT.h  LLT.h
eigen-3.4.0/Eigen/src/CholmodSupport/: CholmodSupport.h
eigen-3.4.0/Eigen/src/Core/: ArithmeticSequence.h  Array.h  ArrayBase.h  Block.h  CommaInitializer.h  ConditionEstimator.h  CwiseBinaryOp.h  DenseBase.h  DenseCoeffsBase.h  DenseStorage.h  Diagonal.h  EigenBase.h  ForceAlignedAccess.h  Fuzzy.h  GlobalFunctions.h  IO.h  IndexedView.h  Map.h  MapBase.h  MathFunctions.h  Matrix.h  MatrixBase.h  NoAlias.h  NumTraits.h  PermutationMatrix.h  PlainObjectBase.h  ProductEvaluators.h  Redux.h  Ref.h  Replicate.h  Reshaped.h  Reverse.h  Select.h  SelfAdjointView.h  StlIterators.h  Stride.h  Transpose.h  Transpositions.h  TriangularMatrix.h  VectorwiseOp.h  (+1 more)
eigen-3.4.0/Eigen/src/Core/arch/SYCL/: SyclMemoryModel.h
eigen-3.4.0/Eigen/src/Core/functors/: UnaryFunctors.h
eigen-3.4.0/Eigen/src/Core/products/: GeneralBlockPanelKernel.h
eigen-3.4.0/Eigen/src/Core/util/: Constants.h  IntegralConstant.h  Memory.h  Meta.h  StaticAssert.h  XprHelper.h
eigen-3.4.0/Eigen/src/Eigenvalues/: ComplexEigenSolver.h  ComplexSchur.h  EigenSolver.h  GeneralizedEigenSolver.h  GeneralizedSelfAdjointEigenSolver.h  HessenbergDecomposition.h  RealSchur.h  SelfAdjointEigenSolver.h  Tridiagonalization.h
eigen-3.4.0/Eigen/src/Geometry/: AlignedBox.h  EulerAngles.h  Hyperplane.h  ParametrizedLine.h  Quaternion.h  RotationBase.h  Transform.h  Umeyama.h
eigen-3.4.0/Eigen/src/Householder/: HouseholderSequence.h
eigen-3.4.0/Eigen/src/IterativeLinearSolvers/: BasicPreconditioners.h  BiCGSTAB.h  ConjugateGradient.h  IncompleteCholesky.h  LeastSquareConjugateGradient.h
eigen-3.4.0/Eigen/src/Jacobi/: Jacobi.h
eigen-3.4.0/Eigen/src/KLUSupport/: KLUSupport.h
eigen-3.4.0/Eigen/src/LU/: FullPivLU.h  InverseImpl.h
eigen-3.4.0/Eigen/src/OrderingMethods/: Amd.h
eigen-3.4.0/Eigen/src/PaStiXSupport/: PaStiXSupport.h
eigen-3.4.0/Eigen/src/PardisoSupport/: PardisoSupport.h
eigen-3.4.0/Eigen/src/QR/: ColPivHouseholderQR.h  CompleteOrthogonalDecomposition.h  FullPivHouseholderQR.h  HouseholderQR.h
eigen-3.4.0/Eigen/src/SVD/: BDCSVD.h  JacobiSVD.h  SVDBase.h
eigen-3.4.0/Eigen/src/SparseCholesky/: SimplicialCholesky.h
eigen-3.4.0/Eigen/src/SparseCore/: SparseCompressedBase.h  SparseMatrix.h  SparseMatrixBase.h  SparseProduct.h  SparseRef.h  SparseVector.h  SparseView.h
eigen-3.4.0/Eigen/src/SparseLU/: SparseLU.h  SparseLU_Memory.h  SparseLU_column_dfs.h  SparseLU_gemm_kernel.h  SparseLU_heap_relax_snode.h  SparseLU_panel_dfs.h  SparseLU_relax_snode.h
eigen-3.4.0/Eigen/src/SparseQR/: SparseQR.h
eigen-3.4.0/Eigen/src/UmfPackSupport/: UmfPackSupport.h
eigen-3.4.0/Eigen/src/plugins/: BlockMethods.h  ReshapedMethods.h
include/: Channel.h  Decoder.h  MySignal.h  ProblemParameters.h  QAMConstellation.h  Signal.h  System.h  User.h  placeholder.h
src/: Channel.cpp  MySignal.cpp  ProblemParameters.cpp  QAMConstellation.cpp  Signal.cpp  System.cpp  User.cpp  placeholder.cpp
tests/: QAMConstellation_tests.cpp  Signal_tests.cpp  all_tests.cpp  channel_tests.cpp  decoder_tests.cpp  parameter_tests.cpp  placeholder_test.cpp  test.cpp
